# worker_challenge

./: .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust-doc.yml  rust.yml
worker/: Cargo.toml
worker/src/: download.rs  lib.rs  task.rs
worker/src/data/: manager.rs  mod.rs  utils.rs
