[workspace]
members = ["worker"]
resolver = "2"

[workspace.package]
authors = ["Yoann Lambert <yoann.lambert@proton.me>"]
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
futures = "0.3"
tokio = "1.41"
tracing = "0.1"
tracing-test = "0.2"
