[workspace]
members = ["worker"]
resolver = "2"

[workspace.package]
authors = ["Yoann Lambert <yoann.lambert@proton.me>"]
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
bytes = "1.0"
futures = "0.3"
reqwest = "0.12"
thiserror = "2.0"
tokio = "1.41"
tracing = "0.1"
tracing-test = "0.2"
url = "2.2"
