[package]
name = "worker"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-test.workspace = true
