[package]
name = "worker"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "rt", "sync", "time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test.workspace = true
tracing-test.workspace = true
